# kibo-converter

./: .gitignore  README.md  pyproject.toml
docs/: known-limitations.md  manual-test-checklist.md
src/kibo_converter/: __init__.py  constants.py  main.py
src/kibo_converter/application/: __init__.py  job_executor.py  job_persistence.py  job_preflight.py  job_preview.py  progress_reporter.py
src/kibo_converter/domain/: __init__.py  file_selection.py  job_catalog.py  job_definition.py  job_result.py  job_types.py  job_ui_models.py  output_rules.py  processing_steps.py
src/kibo_converter/infrastructure/: __init__.py  filesystem_scanner.py  image_reader_writer.py  input_path_filter.py  output_collision_resolver.py  result_logger.py
src/kibo_converter/ui/: __init__.py  candidate_review_panel.py  job_catalog_panel.py  job_form.py  job_run_panel.py  main_window.py  output_preview_panel.py  view_models.py
tests/: conftest.py
tests/fixtures/images/: README.md
tests/integration/: test_heic_feasibility.py  test_image_reader_writer.py  test_job_execution_flow.py  test_output_collision_resolver.py  test_result_logger.py  test_saved_job_rerun_flow.py
tests/ui/: test_candidate_review_panel.py  test_job_form.py  test_job_run_panel.py  test_main_window.py  test_output_preview_panel.py
tests/unit/application/: test_job_executor.py  test_job_persistence.py  test_job_preflight.py  test_job_preview.py
tests/unit/domain/: test_file_selection.py  test_job_definition.py  test_output_rules.py
tests/unit/infrastructure/: test_filesystem_scanner.py
(+1 files in other folders)
